[gd_scene load_steps=17 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Particles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Indicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://snowwalk.wav" type="AudioStream" id=6]
[ext_resource path="res://lavaland.wav" type="AudioStream" id=7]
[ext_resource path="res://autumn.ogg" type="AudioStream" id=8]
[ext_resource path="res://summer.wav" type="AudioStream" id=9]
[ext_resource path="res://bubble.wav" type="AudioStream" id=10]
[ext_resource path="res://cackle.wav" type="AudioStream" id=11]
[ext_resource path="res://rustle.wav" type="AudioStream" id=12]
[ext_resource path="res://nice.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Main" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Rect" ]
TOLERANCE = 10

[node name="Background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.722656, 0.621033, 0.718687, 1 )
_sections_unfolded = [ "Margin" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[node name="Node" parent="." index="2" instance=ExtResource( 2 )]

modulate = Color( 0.0933838, 0.996094, 0.996094, 1 )
margin_bottom = 280.0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="Node2" parent="." index="3" instance=ExtResource( 2 )]

modulate = Color( 0.878906, 0.185394, 0.185394, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -280.0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="Node3" parent="." index="4" instance=ExtResource( 2 )]

modulate = Color( 0.185394, 0.878906, 0.244993, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -280.0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="Node4" parent="." index="5" instance=ExtResource( 2 )]

modulate = Color( 0.980469, 0.519917, 0.183838, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 280.0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="Particles2D" parent="." index="6" instance=ExtResource( 3 )]

_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Indicator" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 130.083, 279.443 )
scale = Vector2( 1.5, 2 )

[node name="Score" type="Label" parent="." index="8"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -72.0
margin_right = 81.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="TimeLeft" type="Label" parent="." index="9"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -98.0
margin_right = 81.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "30"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Background Music" type="Node" parent="." index="10"]

[node name="Ice Background" type="AudioStreamPlayer" parent="Background Music" index="0"]

stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Lava Background" type="AudioStreamPlayer" parent="Background Music" index="1"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Fall Background" type="AudioStreamPlayer" parent="Background Music" index="2"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Nice Background" type="AudioStreamPlayer" parent="Background Music" index="3"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SFX" type="Node" parent="." index="11"]

[node name="Ice Score" type="AudioStreamPlayer" parent="SFX" index="0"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Lava Score" type="AudioStreamPlayer" parent="SFX" index="1"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Fall Score" type="AudioStreamPlayer" parent="SFX" index="2"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Nice Score" type="AudioStreamPlayer" parent="SFX" index="3"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="IcePart" type="Node2D" parent="." index="12"]

position = Vector2( 44, 225.51 )
_sections_unfolded = [ "Transform" ]

[node name="IceRange" type="ColorRect" parent="IcePart" index="0"]

modulate = Color( 1, 0, 0, 0.640863 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Margin", "Material" ]

[node name="FallPart" type="Node2D" parent="." index="13"]

position = Vector2( 235.69, 224.402 )
_sections_unfolded = [ "Transform" ]

[node name="FallRange" type="ColorRect" parent="FallPart" index="0"]

modulate = Color( 1, 0, 0, 0.640863 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Margin", "Material" ]

[node name="RedPart" type="Node2D" parent="." index="14"]

position = Vector2( 239.373, 591.495 )
_sections_unfolded = [ "Transform" ]

[node name="RedRange" type="ColorRect" parent="RedPart" index="0"]

modulate = Color( 1, 0, 0, 0.640863 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Margin", "Material" ]

[node name="GreenPart" type="Node2D" parent="." index="15"]

position = Vector2( 44.1627, 587.812 )
_sections_unfolded = [ "Transform" ]

[node name="GreenRange" type="ColorRect" parent="GreenPart" index="0"]

modulate = Color( 1, 0, 0, 0.640863 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Margin", "Material" ]

[node name="ColorRect" type="ColorRect" parent="." index="16"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 250.0
margin_right = 320.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.296875, 0.253967, 0.253967, 1 )
_sections_unfolded = [ "Margin", "Visibility" ]

[node name="Message" type="Label" parent="." index="17"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 258.0
margin_right = 320.0
margin_bottom = 693.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="GameOvertime" type="Timer" parent="." index="18"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="GameOvertime" to="." method="_on_GameOvertime_timeout"]


